# vacant-py

./: .gitignore  .release-please-config.json  CHANGELOG.md  Cargo.toml  Justfile  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml  pr-title.yml  release.yml
crates/vacant-py/: Cargo.toml
crates/vacant-py/src/: lib.rs
python/vacant/: __init__.py  checker.py  cli.py  disk_cache.py  rules.toml
tests/: test_smoke.py
