[package]
name = "vacant-py"
version = "0.3.2" # x-release-please-version
edition = "2021"
license = "MIT"
authors = ["David Poblador i Garcia <david@poblador.com>"]
description = "PyO3 bindings for the vacant Rust engine — domain availability via authoritative DNS."
publish = false

[lib]
name = "_core"
crate-type = ["cdylib"]

[dependencies]
vacant = "=0.3.2" # x-release-please-version
pyo3 = { version = "0.22", features = ["extension-module", "abi3-py311"] }
